fix before npm publishing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "grunt-mongo-drop",
+    "name": "grunt-mongo-drop-task",
     "version": "0.1.0",
     "description": "Grunt task to drop mongo database",
     "scripts": {
@@ -20,8 +20,5 @@
     "bugs": {
         "url": "https://github.com/IOKI/grunt-mongo-drop/issues"
     },
-    "homepage": "https://github.com/IOKI/grunt-mongo-drop",
-    "devDependencies": {
-        "grunt": "~0.4.5"
-    }
+    "homepage": "https://github.com/IOKI/grunt-mongo-drop"
 }
